Добавлено описание тестирования